fixed quote bug where it was not showing changes in margin

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ ul {
     gap: 65px;
 }
 
+span {
+    margin-bottom: 40px;
+}
+
 .about {
     text-align: center;
     margin: 20px;
@@ -77,12 +81,13 @@ ul {
 }
 
 .quote p {
-    padding: 0;
+    padding: 10px;
     margin-left: 400px;
     margin-right: 400px;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 36px;
+    font-size: 28px;
     font-weight: lighter;
 }
+
